--- a/modelling.ipynb
+++ b/modelling.ipynb
@@ -11,10 +11,19 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "f49fe08f",
+   "metadata": {},
+   "source": [
+    "**Go through to the end of the workbook, play around with the models, create your own and sent me your predictions. I will grade you based on recall score!** 😀"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "20b7dac1",
    "metadata": {},
    "source": [
-    "This dataset is a subset of an active survey panel. \n",
+    "The dataset I provided is a subset of an active survey panel. \n",
     "\n",
     "Collected from 3 data sources a customer management database a survey management database and an email tracker software tool.\n",
     "\n",
@@ -744,7 +753,7 @@
     {
      "data": {
       "text/plain": [
-       "(6541, 27)"
+       "(6524, 27)"
       ]
      },
      "execution_count": 27,
@@ -1076,11 +1085,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.954064</td>\n",
+       "      <td>0.941696</td>\n",
        "      <td>0.125</td>\n",
-       "      <td>0.542482</td>\n",
-       "      <td>0.021739</td>\n",
-       "      <td>0.105691</td>\n",
+       "      <td>0.536254</td>\n",
+       "      <td>0.016667</td>\n",
+       "      <td>0.100000</td>\n",
        "      <td>RF_smoteenn</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1091,7 +1100,7 @@
        "   accuracy  recall       auc  precision    fscore   model type\n",
        "0  0.992049   0.125  0.561610   0.333333  0.128079    RF_weight\n",
        "1  0.964664   0.125  0.547820   0.029412  0.111111     RF_smote\n",
-       "2  0.954064   0.125  0.542482   0.021739  0.105691  RF_smoteenn"
+       "2  0.941696   0.125  0.536254   0.016667  0.100000  RF_smoteenn"
       ]
      },
      "execution_count": 38,
@@ -1164,7 +1173,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>8260</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>DTS</td>\n",
        "      <td>East of England</td>\n",
@@ -1177,7 +1186,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5407</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>ITS</td>\n",
        "      <td>West Midlands</td>\n",
@@ -1190,7 +1199,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>9752</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>SSS</td>\n",
        "      <td>South East</td>\n",
@@ -1203,7 +1212,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2417</td>\n",
+       "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>FSS</td>\n",
        "      <td>Wales</td>\n",
@@ -1216,7 +1225,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>6293</td>\n",
+       "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>FSS</td>\n",
        "      <td>London</td>\n",
@@ -1232,12 +1241,12 @@
        "</div>"
       ],
       "text/plain": [
-       "     ID  Surveys - Paused On Survey Tag           Region Account Type  \\\n",
-       "0  8260                    0        DTS  East of England       Target   \n",
-       "1  5407                    0        ITS    West Midlands       Target   \n",
-       "2  9752                    0        SSS       South East       Target   \n",
-       "3  2417                    0        FSS            Wales       Member   \n",
-       "4  6293                    0        FSS           London       Target   \n",
+       "   ID  Surveys - Paused On Survey Tag           Region Account Type  \\\n",
+       "0   1                    0        DTS  East of England       Target   \n",
+       "1   2                    0        ITS    West Midlands       Target   \n",
+       "2   3                    0        SSS       South East       Target   \n",
+       "3   4                    0        FSS            Wales       Member   \n",
+       "4   5                    0        FSS           London       Target   \n",
        "\n",
        "   Clicks_sum  Deliveries_sum  Opens_sum  Time since response  \\\n",
        "0           0               0          0                 1580   \n",
@@ -1416,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "id": "f05c2aab",
    "metadata": {},
    "outputs": [
@@ -1424,7 +1433,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Success: Thankyou! you scored: 0.6, good try you can do better!\n"
+      "Success: {'score': 0.6}\n"
      ]
     }
    ],
